syntax = "proto3";
package protobuf;



message SnapshotRequest {
	 string LeaderName=1;
	 uint64 LastIndex=2;
	 uint64 LastTerm=3;
}

message SnapshotResponse {
	 bool success=1;
}


service SearchService {
  rpc Search (SnapshotRequest) returns (SnapshotResponse);
}
